--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "mobile-midwife-ai",
+  "name": "mobile-midwife-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.0"
+    "axios": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
